[gd_scene load_steps=65 format=3 uid="uid://b7bwa8ti4go1g"]

[ext_resource type="Script" path="res://minotaur_boss.gd" id="1_wevah"]
[ext_resource type="Texture2D" uid="uid://b42n5r3ytpfss" path="res://assets/sprites/Minotaur - Sprite Sheet.png" id="2_6id5q"]
[ext_resource type="PackedScene" uid="uid://otwpin5ufu6j" path="res://scenes/World/health_bar.tscn" id="2_7ta87"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lgma8"]
radius = 19.0

[sub_resource type="AtlasTexture" id="AtlasTexture_v45qy"]
atlas = ExtResource("2_6id5q")
region = Rect2(0, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncrjw"]
atlas = ExtResource("2_6id5q")
region = Rect2(96, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_igfid"]
atlas = ExtResource("2_6id5q")
region = Rect2(192, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2j83"]
atlas = ExtResource("2_6id5q")
region = Rect2(288, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4ffh"]
atlas = ExtResource("2_6id5q")
region = Rect2(384, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkamv"]
atlas = ExtResource("2_6id5q")
region = Rect2(480, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4um5x"]
atlas = ExtResource("2_6id5q")
region = Rect2(576, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h38b"]
atlas = ExtResource("2_6id5q")
region = Rect2(672, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6360p"]
atlas = ExtResource("2_6id5q")
region = Rect2(768, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0405m"]
atlas = ExtResource("2_6id5q")
region = Rect2(0, 384, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_85mo3"]
atlas = ExtResource("2_6id5q")
region = Rect2(96, 384, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqjjr"]
atlas = ExtResource("2_6id5q")
region = Rect2(192, 384, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kii3n"]
atlas = ExtResource("2_6id5q")
region = Rect2(288, 384, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_f51ao"]
atlas = ExtResource("2_6id5q")
region = Rect2(384, 384, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxtm6"]
atlas = ExtResource("2_6id5q")
region = Rect2(0, 864, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0xw2"]
atlas = ExtResource("2_6id5q")
region = Rect2(96, 864, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkct6"]
atlas = ExtResource("2_6id5q")
region = Rect2(192, 864, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yessq"]
atlas = ExtResource("2_6id5q")
region = Rect2(288, 864, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_w043y"]
atlas = ExtResource("2_6id5q")
region = Rect2(384, 864, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1uu7"]
atlas = ExtResource("2_6id5q")
region = Rect2(480, 864, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dayqk"]
atlas = ExtResource("2_6id5q")
region = Rect2(0, 768, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xafy"]
atlas = ExtResource("2_6id5q")
region = Rect2(96, 768, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndmcl"]
atlas = ExtResource("2_6id5q")
region = Rect2(192, 768, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_u12dh"]
atlas = ExtResource("2_6id5q")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k46p1"]
atlas = ExtResource("2_6id5q")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv3u1"]
atlas = ExtResource("2_6id5q")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq4ct"]
atlas = ExtResource("2_6id5q")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_751jj"]
atlas = ExtResource("2_6id5q")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge2ga"]
atlas = ExtResource("2_6id5q")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_36s22"]
atlas = ExtResource("2_6id5q")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mldmw"]
atlas = ExtResource("2_6id5q")
region = Rect2(192, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1alx"]
atlas = ExtResource("2_6id5q")
region = Rect2(288, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq6ur"]
atlas = ExtResource("2_6id5q")
region = Rect2(384, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrmt2"]
atlas = ExtResource("2_6id5q")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_73e6b"]
atlas = ExtResource("2_6id5q")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_aaghq"]
atlas = ExtResource("2_6id5q")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_foxbv"]
atlas = ExtResource("2_6id5q")
region = Rect2(288, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyujj"]
atlas = ExtResource("2_6id5q")
region = Rect2(384, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_my35w"]
atlas = ExtResource("2_6id5q")
region = Rect2(480, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ix58l"]
atlas = ExtResource("2_6id5q")
region = Rect2(576, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_63yom"]
atlas = ExtResource("2_6id5q")
region = Rect2(672, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_44s2f"]
atlas = ExtResource("2_6id5q")
region = Rect2(0, 480, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvwu7"]
atlas = ExtResource("2_6id5q")
region = Rect2(96, 480, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_d71w2"]
atlas = ExtResource("2_6id5q")
region = Rect2(192, 480, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xige"]
atlas = ExtResource("2_6id5q")
region = Rect2(288, 480, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww2tr"]
atlas = ExtResource("2_6id5q")
region = Rect2(384, 480, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sujkn"]
atlas = ExtResource("2_6id5q")
region = Rect2(480, 480, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_l615k"]
atlas = ExtResource("2_6id5q")
region = Rect2(0, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iajch"]
atlas = ExtResource("2_6id5q")
region = Rect2(96, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf5lm"]
atlas = ExtResource("2_6id5q")
region = Rect2(192, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_he3hp"]
atlas = ExtResource("2_6id5q")
region = Rect2(288, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahtlc"]
atlas = ExtResource("2_6id5q")
region = Rect2(384, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_djg26"]
atlas = ExtResource("2_6id5q")
region = Rect2(480, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmq3t"]
atlas = ExtResource("2_6id5q")
region = Rect2(576, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw31p"]
atlas = ExtResource("2_6id5q")
region = Rect2(672, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m7x3"]
atlas = ExtResource("2_6id5q")
region = Rect2(768, 576, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_7n7m5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v45qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncrjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igfid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2j83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4ffh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkamv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4um5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h38b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6360p")
}],
"loop": false,
"name": &"attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0405m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85mo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqjjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kii3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f51ao")
}],
"loop": false,
"name": &"attack2",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxtm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0xw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkct6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yessq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w043y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1uu7")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dayqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xafy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndmcl")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u12dh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k46p1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv3u1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq4ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_751jj")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge2ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36s22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mldmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1alx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq6ur")
}],
"loop": true,
"name": &"prepare",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrmt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73e6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aaghq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_foxbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyujj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my35w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix58l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63yom")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_44s2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvwu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d71w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xige")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww2tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sujkn")
}],
"loop": false,
"name": &"stomp",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l615k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iajch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf5lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he3hp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahtlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djg26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmq3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw31p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m7x3")
}],
"loop": false,
"name": &"swirl",
"speed": 14.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxq3e"]
size = Vector2(55.25, 60.1094)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4lci"]
size = Vector2(42, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ah81"]
size = Vector2(72, 23)

[node name="minotaur_boss" type="Node2D"]
script = ExtResource("1_wevah")

[node name="RigidBody2D" type="RigidBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(0, -20)
shape = SubResource("CircleShape2D_lgma8")

[node name="HealthBar" parent="RigidBody2D" instance=ExtResource("2_7ta87")]
offset_left = -47.0
offset_top = -68.0
offset_right = 44.0
offset_bottom = -45.0

[node name="minotaur_sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -15)
sprite_frames = SubResource("SpriteFrames_7n7m5")
animation = &"death"
autoplay = "idle"

[node name="attack_1_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_1_range"]
position = Vector2(13, -28)
shape = SubResource("RectangleShape2D_xxq3e")

[node name="attack_2_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_2_range"]
position = Vector2(24, -10)
shape = SubResource("RectangleShape2D_x4lci")

[node name="charge_timer" type="Timer" parent="."]
wait_time = 8.0

[node name="swirl_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="swirl_range"]
position = Vector2(7, -9.5)
shape = SubResource("RectangleShape2D_3ah81")

[node name="swirl_cooldown" type="Timer" parent="."]
wait_time = 6.0

[connection signal="body_entered" from="attack_1_range" to="." method="_on_attack_1_range_body_entered"]
[connection signal="body_exited" from="attack_1_range" to="." method="_on_attack_1_range_body_exited"]
[connection signal="body_entered" from="attack_2_range" to="." method="_on_attack_2_range_body_entered"]
[connection signal="body_exited" from="attack_2_range" to="." method="_on_attack_2_range_body_exited"]
[connection signal="body_entered" from="swirl_range" to="." method="_on_swirl_range_body_entered"]
[connection signal="body_exited" from="swirl_range" to="." method="_on_swirl_range_body_exited"]
[connection signal="timeout" from="swirl_cooldown" to="." method="_on_swirl_cooldown_timeout"]
